<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity Dengan Data</string>
    <string name="pindah_activity_dengan_objek">Pindah Activity Dengan Objek</string>
    <string name="dial_a_number">Dial a Number</string>
    <string name="pindah_activity_untuk_result">Pindah Activity untuk Result</string>
    <string name="hasil_dari_activity">Hasil dari Activity</string>
    <string name="toast_message">Toast bro!</string>
</resources>
