<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/layout_vertical_margin"
    android:layout_marginTop="@dimen/layout_vertical_margin"
    android:layout_marginLeft="@dimen/layout_horizontal_margin"
    android:layout_marginRight="@dimen/layout_horizontal_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity"
        android:layout_marginBottom="@dimen/layout_vertical_margin" />

    <Button
        android:id="@+id/btn_move_activity_with_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_dengan_data"
        android:layout_marginBottom="@dimen/layout_vertical_margin" />

    <Button
        android:id="@+id/btn_move_activity_with_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_dengan_objek"
        android:layout_marginBottom="@dimen/layout_vertical_margin" />

    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_a_number"
        android:layout_marginBottom="@dimen/layout_vertical_margin" />

    <Button
        android:id="@+id/btn_activity_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_untuk_result"
        android:layout_marginBottom="@dimen/layout_vertical_margin" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil_dari_activity"
        android:textStyle="bold"
        android:gravity="center" />

</LinearLayout>